--- a/.github/workflows/blender.yml
+++ b/.github/workflows/blender.yml
@@ -92,18 +92,19 @@ jobs:
           --require-operator jupedsim.load_simulation \
           --require-operator jupedsim.select_file \
           --test-sqlite-loading   
-          shell: bash
-          run: |
-            set -euxo pipefail
-            
-            "$BLENDER_BIN" \
-            --background \
-            --factory-startup \
-            --python blender_jps/tests/test_plugin_loading.py \
-            -- \
-            --addon "${ADDON_MODULE}" \
-            --factory-startup \
-            --require-module pedpy
+
+     - name: Run basic add-on test
+       shell: bash
+       run: |
+         set -euxo pipefail
+         "$BLENDER_BIN" \
+         --background \
+         --factory-startup \
+         --python blender_jps/tests/test_plugin_loading.py \
+         -- \
+         --addon "${ADDON_MODULE}" \
+         --factory-startup \
+         --require-module pedpy    
             
       - name: Upload test artifacts on failure
         if: failure()
