--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
+[project]
+name = "BlenderJPS"
+version = "0.1.3"
+requires-python = ">=3.11"
+
+
 [tool.ruff]
-target-version = "py310"
+target-version = "py311"
 line-length = 100
 
 [tool.ruff.lint]
